# source-cooperative-validator-stac

./: .gitignore  Dockerfile  Dockerfile.stac  Makefile  README.md  entrypoint.sh  requirements.txt
src/: cli.py  entrypoint.py  pyproject.toml  requirements.txt  setup.py
src/utils/: utilities.py
src/validators/: cog_validator.py  stac_validator.py
src/validators/stac_validator/: pyproject.toml  stac_utilities.py  stac_validator.py  validate async.py  validate.py
src/validators/stac_validator/stac_schemas/v1.0.0/: schema.json  schema_store.json
src/validators/stac_validator/tests/: test_default.py
