[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "source-stac-validator"
description = "Source Cooperative STAC Validator"
authors = [
    {name = "Daniel Nwaeze", email = "daniel@radiant.earth"}
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "jsonschema",
    "backoff",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest","flake8", "black"]

[tool.setuptools]
py-modules = []


